--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <link rel="stylesheet" href="assets/styles/css/bootstrap5.css">
 <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-<link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
+<link rel="stylesheet" href="assets/styles/css/plyr.css" />
 <link rel="stylesheet" href="assets/styles/css/main.css">
 <body>
     <!-- header -->
@@ -372,7 +372,7 @@
     </footer>
 
 <script src="assets/js/plugins/jquery.js"></script>
-<script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
+<script src="assets/js/plugins/plyr.js"></script>
 <script src="assets/js/index.js"></script>
 
 <script>
