--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 <div class="col-lg-6">
                    <div class="bidding-enhanced-video">
                     <video width="500" id="player" playsinline controls poster="/assets/images/png/video.png">
-                        <source src="/assets/videos/2020 MAN TGX driving.mp4" type="video/mp4" />
+                        <source src="/assets/videos/2020 MAN TGX driving_Trim.mp4" type="video/mp4" />
                       
                         <!-- Captions are optional -->
                         <track kind="captions" label="English captions" src="/path/to/captions.vtt" srclang="en" default />
