--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
     </footer>
 
-    
+
   <!-- Modal -->
   <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -403,7 +403,7 @@
                     <div class="form-list select">
                         <input type="text" class="form__input" id="selectInp" name="user-select" placeholder=" " required>
                         <label for="selectInp" class="form__label">Your select</label>
-
+                        <i class="far fa-chevron-down"></i>
                         <div class="select-item">
                             <div class="option">
                                 <span class="option__text">Lorem, ipsum - 1.</span>
