--- a/index.html
+++ b/index.html
@@ -281,13 +281,25 @@
                     <div class="faq-macbook">
                         <div class="position-relative">
                             <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
-                            <img src="assets/images/png/macBook-front.png" alt="" class="mackBook-front">
                         </div>
                         <img src="assets/images/png/MacBook.png" alt="MacBook" class="faq-macbook__macbook-img">
                     </div>
                 </div>
 
                 <div class="col-md-6">
+                    <div class="faq-item">
+                        <div class="faq-item-title">
+                            <h5 class="faq-item-title__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </h5>
+                            <i class="fas fa-file-search"></i>
+                        </div>
+                        <div class="faq-item-info">
+                            <p class="faq-item-info__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt elementum nunc sed ornare fusce eget. Aenean veli
+                            </p>
+                        </div>
+                    </div>
                     <div class="faq-item">
                         <div class="faq-item-title">
                             <h5 class="faq-item-title__text">
