--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-xl-6 col-lg-7 ">
                         <div class="nav-item d-flex align-center justify-content-between">
                             <div class="nav-item-email d-flex align-center">
                                 <div class="email-icon">
@@ -56,7 +56,7 @@
 
             <div class="header-title">
                 <div class="row d-flex justify-content-between">
-                    <div class="col-lg-6 ">
+                    <div class="col-md-6 col-sm-7">
                         <div class="header-title-left">
                             <p class="header-title__sup-text">
                                 THOUSANDS OF LOADS DAILY
@@ -79,10 +79,10 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 col-md-6 col-sm-5">
                         <div class="header-title-hand  animate__animated animate__backInUp animate__delay-1s">
-                            <div class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="2s">
-                                <img src="assets/images/png/hand_hr.png" alt="" class="header-title-hand__img ">
+                            <div class="position-relative wow bounceInUp" data-wow-duration="1s" data-wow-delay="2s">
+                                <img src="assets/images/png/hand_hr.png" alt="" class="header-title-hand__img">
                                 <img src="assets/images/png/frontPhone.png" alt="" class="front-phone">
                             </div>
 
@@ -147,8 +147,8 @@
                 <div class="col-lg-6">
                     <div class="our-advantages-phone">
                         <img src="assets/images/png/backCircle.png" alt="back-circle" class="back-circle">
-                        <img src="assets/images/png/Mobile-back.png" alt="back-phone" class="back-phone wow rollIn center" data-wow-delay="1s" style="visibility: visible; animation-name: rollIn;">
-                        <img src="assets/images/png/Mobile-front.png" alt="front-phone" class="front-phone wow rollIn center" data-wow-delay="2s"  style="visibility: visible; animation-name: rollIn;">
+                        <img src="assets/images/png/Mobile-back.png" alt="back-phone" class="back-phone wow bounceInUp center" data-wow-delay="1s">
+                        <img src="assets/images/png/Mobile-front.png" alt="front-phone" class="front-phone wow bounceInUp center" data-wow-delay="2s">
                         <img src="assets/images/png/triangle.png" alt="triangle" class="triangle wow fadeInUp" data-wow-duration="1s" data-wow-delay="2s">
                     </div>
                 </div>
@@ -162,7 +162,7 @@
         <div class="bgc"></div>
         <div class="container position-relative">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-5" >
                     <div class="our-service-left">
                         <h2 class="our-service__title  wow bounceInLeft"  data-wow-duration="1s" data-wow-delay="">
                             Why choose our <br> service 
@@ -175,7 +175,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-7">
                     <ul class="our-service-item">
                         <li class="our-service-list">
                             <div class="check-circle">
@@ -233,7 +233,7 @@
                 </div>
             </div>
             <div class="row position-relative">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="become-member-item">
                         <div class="become-member-item-circle">
                             1
@@ -243,7 +243,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="become-member-item">
                         <div class="become-member-item-circle">
                             2
@@ -254,7 +254,7 @@
                     </div>
                     <div class="line_red"></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="become-member-item">
                         <div class="become-member-item-circle">
                             3
@@ -272,7 +272,7 @@
     <section class="faq">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 offset-lg-6">
+                <div class="col-md-6 offset-md-6">
                     <h2 class="faq__title  wow bounceInLeft"  data-wow-duration="1s" data-wow-delay="">FAQ</h2>
                 </div>
             </div>
@@ -347,16 +347,16 @@
     <!-- Bidding Enhanced -->
     <section class="bidding-enhanced">
         <div class="container">
-            <div class="row d-flex align-center">
-                <div class="col-lg-6">
+            <div class="row d-flex align-center bidding-enhanced_mobile">
+                <div class="col-md-6">
                    <div class="bidding-enhanced-video">
-                    <video width="500" id="player" playsinline controls poster="/assets/images/png/video.png">
+                    <video id="player" playsinline controls poster="/assets/images/png/video.png">
                         <source src="/assets/videos/2020 MAN TGX driving_Trim.mp4" type="video/mp4" />
                       </video>
                       
                    </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-md-6">
                     <h3 class="bidding-enhanced__title  wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
                         Bidding Enhanced
                     </h3>
@@ -441,8 +441,12 @@
         </div>
       </div>
     </div>
+
   </div>
   
+
+  <button class="mobile_fixed">Jouin us</button>
+
 
 <script src="assets/js/plugins/jquery.js"></script>
 <script src="assets/js/plugins/wow.min.js"></script>
