--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                             <p class="header-title__sup-text">
                                 THOUSANDS OF LOADS DAILY
                             </p>
-                            <h1 class="header-title__text wow bounceInLeft" data-wow-duration="1s" data-wow-delay="">
+                            <h1 class="header-title__text wow bounceInLeft">
                                 First Ever Owner-Operator Ecosystem
                             </h1>
                             <button class="header-title__button">
-                                Jouin us
+                                Join us
                             </button>
     
                             <div class="header-title-store">
@@ -81,12 +81,12 @@
 
                     <div class="col-lg-5 col-md-6 col-sm-5">
                         <div class="header-title-hand  animate__animated animate__backInUp animate__delay-1s">
-                            <div class="position-relative wow bounceInUp" data-wow-duration="1s" data-wow-delay="2s">
+                            <div class="position-relative wow bounceInUp">
                                 <img src="assets/images/png/hand_hr.png" alt="" class="header-title-hand__img">
                                 <img src="assets/images/png/frontPhone.png" alt="" class="front-phone">
                             </div>
 
-                            <div class="header-circle wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
+                            <div class="header-circle wow bounceInUp">
                                 <img src="assets/images/png/Ellipse 3.png" alt="" class="header-circle__img">
                             </div>
                         </div>
@@ -101,7 +101,7 @@
         <div class="container">
             <div class="row d-flex align-center">
                 <div class="col-12">
-                    <h2 class="our-advantages__title wow slideInLeft" data-wow-duration="1s" data-wow-delay="">
+                    <h2 class="our-advantages__title wow slideInLeft">
                         our <br> advantages
                     </h2>
                 </div>
@@ -140,16 +140,16 @@
                         </div>
                     </div>
                     <button class="our-advantages__button">
-                        Jouin us
+                        Join us
                     </button>
                 </div>
 
                 <div class="col-lg-6">
                     <div class="our-advantages-phone">
                         <img src="assets/images/png/backCircle.png" alt="back-circle" class="back-circle">
-                        <img src="assets/images/png/Mobile-back.png" alt="back-phone" class="back-phone wow bounceInUp center" data-wow-delay="1s">
-                        <img src="assets/images/png/Mobile-front.png" alt="front-phone" class="front-phone wow bounceInUp center" data-wow-delay="2s">
-                        <img src="assets/images/png/triangle.png" alt="triangle" class="triangle wow fadeInUp" data-wow-duration="1s" data-wow-delay="2s">
+                        <img src="assets/images/png/Mobile-back.png" alt="back-phone" class="back-phone wow bounceInUp center" >
+                        <img src="assets/images/png/Mobile-front.png" alt="front-phone" class="front-phone wow bounceInUp center">
+                        <img src="assets/images/png/triangle.png" alt="triangle" class="triangle wow fadeInUp" >
                     </div>
                 </div>
             </div>
@@ -164,14 +164,14 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-5" >
                     <div class="our-service-left">
-                        <h2 class="our-service__title  wow bounceInLeft"  data-wow-duration="1s" data-wow-delay="">
+                        <h2 class="our-service__title  wow bounceInLeft">
                             Why choose our <br> service 
                         </h2>
                     </div>
 
                     <div class="our-service-man">
-                        <img src="assets/images/png/service-circle.png" alt="" class="our-service__circle  wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
-                        <img src="assets/images/png/truck-driver-man.png" alt="" class="our-service-man__img wow bounceInUp"  data-wow-duration="1s" data-wow-delay="2s">
+                        <img src="assets/images/png/service-circle.png" alt="" class="our-service__circle  wow bounceInUp">
+                        <img src="assets/images/png/truck-driver-man.png" alt="" class="our-service-man__img wow bounceInUp">
                     </div>
                 </div>
 
@@ -214,7 +214,7 @@
                         </li>
                     </ul>
                     <button class="our-service__button">
-                        Jouin us
+                        Join us
                     </button>
 
                 </div>
@@ -227,7 +227,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="become-member__title  wow bounceInLeft"  data-wow-duration="1s" data-wow-delay="">
+                    <h2 class="become-member__title  wow bounceInLeft">
                         How to be a member of <br> our service
                     </h2>
                 </div>
@@ -273,14 +273,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-6">
-                    <h2 class="faq__title  wow bounceInLeft"  data-wow-duration="1s" data-wow-delay="">FAQ</h2>
+                    <h2 class="faq__title  wow bounceInLeft">FAQ</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="faq-macbook">
                         <div class="position-relative">
-                            <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
+                            <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img wow bounceInUp">
                         </div>
                         <img src="assets/images/png/MacBook.png" alt="MacBook" class="faq-macbook__macbook-img">
                     </div>
@@ -357,14 +357,14 @@
                    </div>
                 </div>
                 <div class="col-md-6">
-                    <h3 class="bidding-enhanced__title  wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
+                    <h3 class="bidding-enhanced__title  wow bounceInUp">
                         Bidding Enhanced
                     </h3>
                     <p class="bidding-enhanced__text">
                         Accessible at your disposal. Don’t sleep on this offer, you can download our app ETL Cargo App and start bidding today! 
                     </p>
                     <div class="bidding-enhanced-buttons">
-                        <button class="btn_joun">Jouin us</button>
+                        <button class="btn_joun">Join us</button>
                         <button class="btn_submit" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Submit</button>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
   </div>
   
 
-  <button class="mobile_fixed">Jouin us</button>
+  <button class="mobile_fixed">Join us</button>
 
 
 <script src="assets/js/plugins/jquery.js"></script>
