--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="header-title">
                 <div class="row d-flex justify-content-between">
-                    <div class="col-md-6 col-sm-7">
+                    <div class="col-sm-7">
                         <div class="header-title-left">
                             <p class="header-title__sup-text">
                                 THOUSANDS OF LOADS DAILY
@@ -79,7 +79,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-5 col-md-6 col-sm-5">
+                    <div class="col-lg-5 col-md-5 col-sm-5">
                         <div class="header-title-hand  animate__animated animate__backInUp animate__delay-1s">
                             <div class="position-relative wow bounceInUp">
                                 <img src="assets/images/png/hand_hr.png" alt="" class="header-title-hand__img">
@@ -272,12 +272,12 @@
     <section class="faq">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-6">
+                <div class="col-lg-6 offset-lg-6 col-12" >
                     <h2 class="faq__title  wow bounceInLeft">FAQ</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="faq-macbook">
                         <div class="position-relative">
                             <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img wow bounceInUp">
@@ -286,7 +286,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <div class="faq-item">
                         <div class="faq-item-title">
                             <h5 class="faq-item-title__text">
@@ -348,15 +348,15 @@
     <section class="bidding-enhanced">
         <div class="container">
             <div class="row d-flex align-center bidding-enhanced_mobile">
-                <div class="col-md-6">
+                <div class="col-lg-6">
                    <div class="bidding-enhanced-video">
-                    <video id="player" playsinline controls poster="/assets/images/png/video.png">
+                    <video  id="player" playsinline controls data-poster="/assets/images/png/video.png">
                         <source src="/assets/videos/2020 MAN TGX driving_Trim.mp4" type="video/mp4" />
                       </video>
                       
                    </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <h3 class="bidding-enhanced__title  wow bounceInUp">
                         Bidding Enhanced
                     </h3>
