--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
 <link rel="stylesheet" href="assets/styles/css/plyr.css" />
 <link rel="stylesheet" href="assets/styles/css/animate.css">
+<link rel="preload" href="assets/fonts/Oswaldmedium.woff2" as="font" crossorigin="anonymous">
+<link rel="preload" href="assets/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
 <link rel="stylesheet" href="assets/styles/css/main.css">
 <body>
     <!-- header -->
