--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/styles/css/bootstrap5.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="assets/styles/css/plyr.css">
+    <link rel="stylesheet" href="assets/styles/css/animate.css">
+    <link rel="stylesheet" href="assets/styles/css/main.css">
 </head>
-<link rel="stylesheet" href="assets/styles/css/bootstrap5.css">
-<link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
-<link rel="stylesheet" href="assets/styles/css/plyr.css" />
-<link rel="stylesheet" href="assets/styles/css/animate.css">
-<link rel="preload" href="assets/fonts/Oswaldmedium.woff2" as="font" crossorigin="anonymous">
-<link rel="preload" href="assets/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
-<link rel="stylesheet" href="assets/styles/css/main.css">
 <body>
     <!-- header -->
     <header class="header">
@@ -446,19 +444,16 @@
 
   </div>
   
-
+<!-- mobile fixed join us -->
   <button class="mobile_fixed">Join us</button>
 
-
-<script src="assets/js/plugins/jquery.js"></script>
-<script src="assets/js/plugins/wow.min.js"></script>
-<script src="assets/js/plugins/mask.js"></script>
-<script src="assets/js/plugins/plyr.js"></script>
-<script src="assets/js/plugins/bootstrap.js"></script>
-<script src="assets/js/index.js"></script>
-
-<script>
-</script>
+<!-- script -->
+    <script src="assets/js/plugins/jquery.js"></script>
+    <script src="assets/js/plugins/wow.min.js"></script>
+    <script src="assets/js/plugins/mask.js"></script>
+    <script src="assets/js/plugins/plyr.js"></script>
+    <script src="assets/js/plugins/bootstrap.js"></script>
+    <script src="assets/js/index.js"></script>
 
 </body>
 </html>
