--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>logistics systems</title>
     <link rel="stylesheet" href="assets/styles/css/bootstrap5.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/styles/css/plyr.css">
     <link rel="stylesheet" href="assets/styles/css/animate.css">
+    <link rel="preload" href="assets/fonts/Oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="assets/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/css/main.css">
 </head>
 <body>
