--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>logistics systems</title>
+    <link rel="preload" href="assets/fonts/Oswaldmedium.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="assets/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/css/bootstrap5.css">
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/styles/css/plyr.css">
     <link rel="stylesheet" href="assets/styles/css/animate.css">
-    <link rel="preload" href="assets/fonts/Oswaldmedium.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="assets/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles/css/main.css">
 </head>
 <body>
@@ -172,8 +172,8 @@
                     </div>
 
                     <div class="our-service-man">
-                        <img src="assets/images/png/service-circle.png" alt="" class="our-service__circle  wow bounceInUp">
-                        <img src="assets/images/png/truck-driver-man.png" alt="" class="our-service-man__img wow bounceInUp">
+                        <img src="assets/images/png/service-circle.png" alt="" class="our-service__circle">
+                        <img src="assets/images/png/truck-driver-man.png" alt="" class="our-service-man__img">
                     </div>
                 </div>
 
@@ -275,7 +275,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-6 col-12" >
-                    <h2 class="faq__title  wow bounceInLeft">FAQ</h2>
+                    <h2 class="faq__title">FAQ</h2>
                 </div>
             </div>
             <div class="row">
