--- a/index.html
+++ b/index.html
@@ -275,14 +275,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-6 col-12" >
-                    <h2 class="faq__title">FAQ</h2>
+                    <h2 class="faq__title  wow bounceInLeft">FAQ</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="faq-macbook">
                         <div class="position-relative">
-                            <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img wow bounceInUp">
+                            <img src="assets/images/png/faq.png" alt="faq" class="faq-macbook__faq-img">
                         </div>
                         <img src="assets/images/png/MacBook.png" alt="MacBook" class="faq-macbook__macbook-img">
                     </div>
