--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-5" >
                     <div class="our-service-left">
-                        <h2 class="our-service__title  wow bounceInLeft">
+                        <h2 class="our-service__title">
                             Why choose our <br> service 
                         </h2>
                     </div>
@@ -275,7 +275,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-6 col-12" >
-                    <h2 class="faq__title  wow bounceInLeft">FAQ</h2>
+                    <h2 class="faq__title">FAQ</h2>
                 </div>
             </div>
             <div class="row">
