--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                                 <div class="phone-icon">
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
-                                <a href="tel:+1 267 388 18 55" class="nav-item-phone__text">
-                                    +1 267 388 18 55
+                                <a href="tel:267 908 7770" class="nav-item-phone__text">
+                                    267 908 7770
                                 </a>
                             </div>
 
