--- a/index.html
+++ b/index.html
@@ -362,9 +362,17 @@
             <div class="row d-flex align-center justify-content-between bidding-enhanced_mobile">
                 <div class="col-lg-6">
                    <div class="bidding-enhanced-video">
-                    <video  id="player" playsinline controls data-poster="/assets/images/png/video.png">
+                    <!-- <video  id="player" playsinline controls data-poster="/assets/images/png/video.png">
                         <source src="/assets/videos/2020 MAN TGX driving_Trim.mp4" type="video/mp4" />
-                      </video>
+                      </video> -->
+                      <iframe  
+                        class="video"
+                        src="https://www.youtube.com/embed/4mEP6MxeKa8" 
+                        title="YouTube video player" 
+                        frameborder="0"
+                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                         allowfullscreen>
+                    </iframe>
                       
                    </div>
                 </div>
